--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -2,24 +2,28 @@
  * App Styles
  */
 
+.navbar {
+  border-bottom: 1px solid whitesmoke;
+}
+
 .todo-container {
-    margin: 20px auto;
-    padding: 10px 30px;
+  margin: 20px auto;
+  padding: 10px 30px;
 }
 
 .todo-element {
-    margin: 10px auto;
-    &:hover {
-        cursor: pointer;
-    }
-    input[type="checkbox"] {
-        margin-right: 10px;
-    }
-    small {
-        margin-left: 10px;
-    }
+  margin: 10px auto;
+  &:hover {
+    cursor: pointer;
+  }
+  input[type="checkbox"] {
+    margin-right: 10px;
+  }
+  small {
+    margin-left: 10px;
+  }
 }
 
 .done {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
