init login pages

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,7 +1,8 @@
-/**
+/*
  * App Styles
  */
 
-@import "main";
-@import "header";
-@import "daily";
+@import 'main';
+@import 'header';
+@import 'daily';
+@import 'login';
