--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -1,6 +1,6 @@
 
 .navbar {
-  border-bottom: 1px solid whitesmoke;
+  border-bottom: 1px solid #f5f5f5;
 }
 
 .navbar-brand {
@@ -10,4 +10,8 @@
 .nav>li>.navbar-item {
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.navbar-right {
+  margin-right: 0;
 }
