--- a/src/assets/_member.scss
+++ b/src/assets/_member.scss
@@ -2,7 +2,7 @@
   background-color: whitesmoke;
   width: 45px;
   height: 45px;
-  border-radius: 45px;
+  border-radius: 4px;
   border: 0;
 }
 
@@ -12,4 +12,10 @@
 
 .member-list {
   margin-top: 1rem;
+}
+
+.media-body {
+  h5 {
+    margin-top: 0;
+  }
 }
