--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -1,5 +1,10 @@
+@import 'variables';
 
 $gray01: #fbfbfb;
+
+h1, h2, h3, h4, h5, h6 {
+  margin: $gutter 0;
+}
 
 p {
   margin-bottom: 5px;
@@ -7,6 +12,11 @@ p {
 
 .__hidden {
   display: none !important;
+}
+
+.title-label {
+  margin-top: 0;
+  line-height: $line-height;
 }
 
 .loader-wrapper {
